2014-11-27  Richard Frith-Macdonald <rfm@gnu.org>

	* EcUserDefaults.m: The -doubleForKey: method was commented out!
	Restore it.

2014-11-26  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: Make -cmdLastIP, -cmdLastOP (and their setters)
	thread-safe.

2014-11-02  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Add method to register a user default / configuration key to have
	updates for a default automatically trigger a method to handle it,
	and to provide 'help' documentation for command line arguments.
	* EcCommand.m:
	Implement 'restart' command for when we want to quit a server and
	have it start up again.

2014-11-01  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: Check for descriptor leaks at 1 minute intervals,
        and shut down if EcDescriptorsMaximum is exceeded or if the
	process runs out of descriptors.

2014-10-23  Richard Frith-Macdonald <rfm@gnu.org>

	* EcCommand.m:
	* Control.plist:
	Add LaunchOrder config to control the order in which services are
	handled by the Command server.  By default we now do them in
	lexicographic order rather than leaving the order undefined.

2014-09-16  Richard Frith-Macdonald <rfm@gnu.org>

	* EcCommand.m: Simplify handling of loss of process and configuration
	error alarms.  Clear such alarms when we receive a ping from the
	process.
	EcLogger.[hm]: Add documentation in the header, plus a new method to
	make subclassing a bit easier.  Fix bug in naming of config keys.

2014-09-04  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: Fix missing clear after unable to register with name
	server.

2014-09-02  Richard Frith-Macdonald <rfm@gnu.org>

	* EcControl.m: If a Command server on a host registers and we already
	have a Command server registered, have the new registration replace
	the old one rather than rejecting it.  The aim is to handle a race
	condition where a Command server is re-registering after some network
	problem and the old registration is still in place.