@@ -1,3 +1,8 @@
+2014-11-28  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* EcAlarmSinkSNMP.m: Fix incorrect OID setup for alarm table in
+	SNMP agent.
+
 2014-11-27  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* EcUserDefaults.m: The -doubleForKey: method was commented out!
